# Transformer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: config.json  config_daily_dialogues.json
data/: augment.txt  data.txt
include/: Augmenter.hpp  CommandLine.hpp  Config.hpp  DataManager.hpp  Global.hpp  Inferencer.hpp  Loader.hpp  Tester.hpp  Tokenizer.hpp  TokensDataset.hpp  Trainer.hpp  Transformer.hpp  Utils.hpp
